test/langtools/tools/javac/valhalla/lworld-values/CheckValueModifier.out
CheckValueModifier.java:18:11: compiler.err.illegal.combination.of.modifiers: interface, value
CheckValueModifier.java:19:12: compiler.err.illegal.combination.of.modifiers: interface, value
CheckValueModifier.java:20:11: compiler.err.mod.not.allowed.here: value
CheckValueModifier.java:21:20: compiler.err.illegal.combination.of.modifiers: abstract, value
CheckValueModifier.java:15:15: compiler.err.mod.not.allowed.here: value
CheckValueModifier.java:16:15: compiler.err.mod.not.allowed.here: value
6 errors
